package com.kasaca.parkio.cajon.entity;

public enum TipoCajon {

    AUTO,
    MOTO,
    DISCAPACITADO,
    ELECTRICO
}
