@startuml

hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class Usuario {
    id : Long
    nombre : String
    apellido : String
    email : String
    password : String
    activo : Boolean
}

class Rol {
    id : Long
    nombre : String
    activo : Boolean
}

class Estacionamiento {
    id : Long
    nombre : String
    descripcion : String
    latitud : BigDecimal
    longitud : BigDecimal
    ownerId : Long
    activo : Boolean
}

class Cajon {
    id : Long
    numero : String
    tipo : TipoCajon
    estado : EstadoCajon
    activo : Boolean
}

class Reserva {
    id : Long
    codigo : String
    placa : String
    estado : EstadoReserva
    fechaReserva : LocalDateTime
    fechaExpiracion : LocalDateTime
    tiempoExpiracionMinutos : Integer
    activo : Boolean
}

enum TipoCajon {
    AUTO
    MOTO
    DISCAPACITADO
    ELECTRICO
}

enum EstadoCajon {
    LIBRE
    RESERVADO
    OCUPADO
    FUERA_SERVICIO
}

enum EstadoReserva {
    CREADA
    CANCELADA
    EXPIRADA
    USADA
}

Usuario "*" -- "*" Rol
Usuario "*" -- "*" Estacionamiento
Usuario "1" -- "*" Estacionamiento : owner
Estacionamiento "1" -- "*" Cajon
Usuario "1" -- "*" Reserva
Estacionamiento "1" -- "*" Reserva
Cajon "1" -- "*" Reserva

Cajon --> TipoCajon
Cajon --> EstadoCajon
Reserva --> EstadoReserva

@enduml
